--- a/splitwise-to-toshl/package.json
+++ b/splitwise-to-toshl/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
