--- a/splitwise-to-toshl/package.json
+++ b/splitwise-to-toshl/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.19",
     "@mui/material": "^5.15.19",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "http-proxy-middleware": "^3.0.0",
     "react": "^18.2.0",
