--- a/splitwise-to-toshl/package.json
+++ b/splitwise-to-toshl/package.json
@@ -4,11 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host 0.0.0.0 --port 2567",
     "dev:server": "node server.js",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "dev:all": "node_modules/.bin/concurrently \"yarn dev\" \"yarn dev:server\"",
+    "docker:build": "docker build -t splitwise-to-toshl .",
+    "docker:run": "docker run -p 2567:2567 splitwise-to-toshl",
+    "docker:save": "docker save -o splitwise-to-toshl.tar splitwise-to-toshl"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -28,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
