--- a/splitwise-to-toshl/package.json
+++ b/splitwise-to-toshl/package.json
@@ -21,10 +21,15 @@
     "@mui/material": "^5.15.19",
     "date-fns": "^3.6.0",
     "express": "^4.19.2",
+    "finalhandler": "^1.2.0",
+    "http": "^0.0.1-security",
     "http-proxy-middleware": "^3.0.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.1"
+    "react-router-dom": "^6.23.1",
+    "serve-static": "^1.15.0",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
