--- a/splitwise-to-toshl/Dockerfile
+++ b/splitwise-to-toshl/Dockerfile
@@ -2,7 +2,8 @@ FROM node:18-alpine
 WORKDIR /usr/src/app
 COPY package*.json ./
 COPY . .
-RUN yarn install
 
-EXPOSE 2567
-CMD ["yarn", "dev:all"]
+RUN yarn install --production && yarn cache clean
+
+EXPOSE 5544
+CMD ["node", "server.js"]
