--- a/splitwise-to-toshl/package.json
+++ b/splitwise-to-toshl/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0 --port 2567",
+    "dev": "node_modules/.bin/concurrently \"yarn dev:client\" \"yarn dev:server\"",
+    "dev:client": "vite --host 0.0.0.0 --port 5554",
     "dev:server": "node server.js",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "dev:all": "node_modules/.bin/concurrently \"yarn dev\" \"yarn dev:server\"",
     "docker:build": "docker build -t splitwise-to-toshl .",
+    "docker:buildx": "docker buildx build --platform linux/amd64 -t splitwise-to-toshl . --load",
     "docker:run": "docker run -p 2567:2567 splitwise-to-toshl",
     "docker:save": "docker save -o splitwise-to-toshl.tar splitwise-to-toshl"
   },
